<resources>
    <string name="app_name">W02HW01</string>
    <string name="username_hint">username</string>
    <string name="pass_hint">password</string>
    <string name="user_error">That username is not in our records</string>
    <string name="pass_error">The password is incorrect</string>
    <string name="welcome">Welcome!</string>
    <string name="login_message">Enter your login credentials below:</string>
    <string name="button_label">Login!</string>
    <string name="title_activity_landing_page">LandingPage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>